// Vitest Snapshot v1

exports[`MenuUser.vue > render component 1`] = `
<div
  class="relative flex justify-center items-end text-3xl px-1 cursor-pointer z-20"
  id="user-menu"
>
  <icon
    class="dark:text-white"
    data-test="icon-open-user-menu"
    id="user-menu"
    name="codicon:account"
    size="24"
  />
  <transition-stub
    appear="false"
    css="true"
    name="menu"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`MenuUser.vue > show menu options 1`] = `
<div
  class="relative flex justify-center items-end text-3xl px-1 cursor-pointer z-20"
  id="user-menu"
>
  <icon
    class="dark:text-white"
    data-test="icon-open-user-menu"
    id="user-menu"
    name="codicon:account"
    size="24"
  />
  <transition-stub
    appear="false"
    css="true"
    name="menu"
    persisted="false"
  >
    <div
      class="absolute bottom-0 translate-y-full bg-white dark:text-white dark:bg-neutral-900 text-sm w-32 p-2 border-gray-300 border rounded flex flex-col z-40 transition-color"
      data-test="option-container"
    >
      <div
        class="absolute w-0 h-0 top-0 left-1/2 -translate-y-full -translate-x-1/2 border-x-8 border-solid border-b-8 border-white border-x-transparent"
      />
      
      <nuxtlink
        data-test="nuxt-link"
        to="/test"
      >
        
        menu-option
        
      </nuxtlink>
      
    </div>
  </transition-stub>
</div>
`;
